--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">Pokedex</a>
+    <div class="navbar-brand"> Pokedex </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,9 +13,5 @@
           <a class="nav-link" href="/pokemon">Pokemon</a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0" action="/search/">
-        <input class="form-control mr-sm-2" type="search" name="q" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
     </div>
 </nav>
