--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,22 +1,52 @@
+{% load static %}
+
 <!doctype html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="icon" href="{% static 'images/pokedex_logo.png' %}">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/bootstrap-4.4.1-dist/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/css/bootstrap-select.min.css">
+    <script src="https://kit.fontawesome.com/a93488b5af.js" crossorigin="anonymous"></script>
+    <style>
+      body{
+        background-image: url(https://media-s3-us-east-1.ceros.com/hype-beast/images/2018/07/13/a9a51bc0b8d626db493ab5f9a971b043/background-hero.png?imageOpt=1&fit=bounds&width=2163);
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+      }
+    </style>
 
     <title>{% block head_title %} {% endblock %}</title>
   </head>
   <body>
     {% include "navbar.html" %}
+    <br>
       <div class="container-fluid">
+        {% if messages %}
+          <div class="container">
+            <div class="row">
+              <div class="col-md-8 mx-auto my-auto">
+                <div class="alert alert-success alert-dismissible" role="alert">
+                    <button type="button" class="close" data-dismiss="alert"> <span aria-hidden="true"> &times; </span> <span class="sr-only"> Close </span> </button>
+                    <ul class="messages">
+                        {% for message in messages %}
+                            {{ message }} 
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+            </div>       
+          </div>
+      {% endif %}
           {% block content %}
           
           {% endblock %}
       </div>
+    <br>
     {% include "js.html" %}
   </body>
 </html>
